# V5Loader

./: .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  build.gradle.kts  cfg.json  gradle.properties
.github/workflows/: build.yml  compile-all.yml  discord-commit.yml  native-linux-builder.yml  native-macos-builder.yml  native-windows-builder.yml
NativeSrc/: .gitignore  CMakeLists.txt
NativeSrc/src/: common.hpp  etherwarp_raymarch.cpp  etherwarp_raymarch.hpp  etherwarp_search.cpp  etherwarp_search.hpp  jni_bridge.cpp  path_annotations.cpp  path_annotations.hpp  path_directional_scan.cpp  path_directional_scan.hpp  path_signature.cpp  path_signature.hpp  path_simplifier.cpp  path_simplifier.hpp  path_voxel_checks.hpp  pathfinder.cpp  pathfinder.hpp  pathfinder_heap.hpp  pathfinder_runtime.hpp  pathfinder_runtime_common.inl  pathfinder_runtime_fly.inl  pathfinder_runtime_walk.inl  world_state.cpp  world_state.hpp  world_voxel_cursor.hpp
NativeSrc/tests/: etherwarp_angle_optimizer_tests.cpp
api/: ctjs.api
gradle/: libs.versions.toml
src/main/java/com/v5/mixins/: AbstractBlockStateMixin.java  AbstractTerrainRenderContextMixin.java  BlockMixin.java  BlockModelRendererMixin.java  BlockRenderLayersMixin.java  CameraMixin.java  ChatHudMixin.java  ChunkOcclusionDataBuilderMixin.java  ClientConnectionMixin.java  ClientConnectionProxyMixin.java  DrawContextCapture.java  EntityRendererMixin.java  FirmamentModAnnouncerMixin.java  FrustumInvoker.java  GameOptionsAccessorMixin.java  GameRendererMixin.java  GlStateManagerMixin.java  HorizontalConnectingBlockMixin.java  KeyboardInputMixin.java  LightTextureManagerMixin.java  MinecraftClientMixin.java  MouseMixin.java  MultiplayerScreenMixin.java  PlayerActionC2SPacketMixin.java  PlayerListHudMixin.java  RenderLayersMixin.java  RotatingCubeMapRendererMixin.java  ScreenPanoramaMixin.java  TitleScreenRedirectMixin.java  TranslationMixin.java  WorldRendererMixin.java  YggdrasilServicesKeyInfoMixin.java
src/main/java/com/v5/storage/: V5MixinStorage.java
src/main/kotlin/com/chattriggers/ctjs/: CTJS.kt
src/main/kotlin/com/v5/: Entrypoint.kt
src/main/kotlin/com/v5/api/: V5Auth.kt  V5Native.kt
src/main/resources/: ctjs.accesswidener  ctjs.mixins.json  fabric.mod.json  swift.mixins.json  v5.mixins.json
src/main/resources/assets/v5/: V5PathJNI-macos-universal.dylib  V5PathJNI.dylib
typing-generator/: build.gradle.kts
(+202 files in other folders)
